--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
 addons:
   ssh_known_hosts: ltongbin.com
 before_install:
-- openssl enc -d -aes-256-cbc -in id_rsa.enc -out ~/.ssh/id_rsa
+- openssl aes-256-cbc -K $encrypted_8e6aadf5448b_key -iv $encrypted_8e6aadf5448b_iv
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
 - echo -e "Host ltongbin.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 script:
