--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 - bundle install
 - bundle exec jekyll build
 after_success:
-- git clone https://github.com/liutongbin2017/ltongbin.com.git
+- git clone https://github.com/liutongbin2017/liutongbin2017.github.io.git
 - cd ltongbin.com && rm -rf * && cp -r ../_site/* .
 - git config user.name "liutongbin"
 - git config user.email "liutongbin@gozap.com"
